--- a/JS_Application/Data_and_Authentication_Exercise/05.Fisher-Game/register.html
+++ b/JS_Application/Data_and_Authentication_Exercise/05.Fisher-Game/register.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biggest Catch</title>
-    <link rel="stylesheet" href="../static/styles.css">
-    <script type="module" src="./register.js"></script>
+    <link rel="stylesheet" href="static/styles.css">
+    <script src="src/register.js"></script>
 </head>
 
 <body>
