--- a/JS_Application/Single_Page_Applications_Exercise/01.Forum/index.html
+++ b/JS_Application/Single_Page_Applications_Exercise/01.Forum/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3cd69e2433.js" crossorigin="anonymous"></script>
-    <script src="src/app.js"></script>
+    <script type="module" src="app.js"></script>
     <title>SoftUni Forum</title>
 </head>
 
@@ -64,9 +64,9 @@
 
                 <!-- topic component  -->
                 <div class="topic-container">
-                    
+
                 </div>
-                
+            </div>
 
         </main>
 
